Hier ook adverteren? Maak nu een pull request aan.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 <body>
 	 	 <h1>Pong</h1>
 	 	 <canvas width="800" height="450" id="canvas">
-	 	     hier had uw reclameboodschap kunnen staan
+             Nimble Writer, <a href="http://store.steampowered.com/app/348200">koop nu</a>!
 	 	 </canvas>
 	 	 <input type="button" id="btn" value="sound">
 	 </body>
